--- a/index.html
+++ b/index.html
@@ -62,10 +62,18 @@
                     </div>
                 </div>
             </div>
+            <nav class="site-nav">
+                <ul>
+                    <li>PROJECTS</li>
+                    <li>EDUCATION</li>
+                    <li>CONTACT</li>
+                </ul>
+            </nav>
             <!--Project Collection-->
             <h3>Project Collection</h3>
             <div class="project-grid">
                 <!--CARD-->
+                <!--
                 <div class="project-card">
                     <div class="base">
                         <div class="inner-card">
@@ -91,18 +99,19 @@
                                     <polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
                                     </svg>
                                 </div>
-                            <p class="foot"><strong>A common project.</strong></p>
+                                
+                            <p class="foot"><strong>A common project.</strong></p> 
                             </div>
                             <div class="fine-print">
                                 <p>1st edition</p> 
                                 <p>Phillip Lankford 2021</p>
                             </div>
                         </div>
-                    </div> 
+                    </div> -->
                 </div>
+                <h3>Education</h3>
+                <h3>Contact</h3>
             </div>
-            <h3>Education</h3>
-            <h3>Contact</h3>
         </div>
     </body>
 </html>
