project archive added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <li class="home">HOME</li>
                         <li>CONTACT</li>
                     </ul>
-                        <li>PROJECT ARCHIVE</li>
+                        <li><a href="archive.html">PROJECT ARCHIVE</a></li>
                 </ul>
             </nav>
 
