styled contact page

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Project Archive</title>
+        <title>CONTACT</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
                     </ul>
                 </nav>
             </div>
-            <h3 class="header">PROJECT ARCHIVE</h3>
+            <h3 class="header">CONTACT</h3>
 
             <nav class="site-nav show-lg">
                 <ul class="lg-nav">
@@ -52,23 +52,33 @@
                 </ul>
             </nav>
 
-            <div class="contact-grid">
-
-                <div class="contact-panel project-button">
-                    <div class="contact-info">
-                        <p>EMAIL</p>
+                <div class="contact-panel">
+                    <div class="character-sheet">
+                        <div class="about">
+                            <h3>ABOUT</h3>
+                            <p class="">
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Excepturi veniam eligendi quo libero, ipsum sapiente 
+                                necessitatibus omnis quod, nam tempora id repellat soluta, 
+                                aliquid perferendis in. Accusamus, neque. 
+                                Temporibus, suscipit!
+                            </p>
+                        </div>
                     </div>
+                        <!-- <div class="socials">
+
+                        </div> -->
+                        <div class="contact-info">
+                            <a href="" target="_blank"><h3>EMAIL</h3></a>
+                            <a href="https://twitter.com/__phillip" target="_blank"><h3>TWITTER</h3></a>
+                            <a href="https://www.instagram.com/philliplankford/" target="_blank"><h3>INSTAGRAM</h3></a>
+                            <a href="https://www.linkedin.com/in/phillip-lankford-3968201b0/" target="_blank"><h3>LINKDIN</h3></a>
+                        </div>
+
+
 
                 </div>
 
-                <div class="contact-panel project-button">
-                    <div class="contact-info">
-                        <p>RESUME</p>
-                    </div>
-
-                </div>
-
-            </div>
         </div>
     </body>
 </html>
