color block footer and header spacing

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
                     <header class="name-title">
                         <h1>Phillip Lankford</h1>
-                        <h3>Front End Web Developer</h3>
+                        <h2>Front End Web Developer</h2>
                     </header>
 
                 </div>
@@ -80,5 +80,15 @@
                 </div>
 
         </div>
+        <footer>
+            <div class="color-block">
+                <div class="block block-one"></div>
+                <div class="block block-two"></div>
+                <div class="block block-three"></div>
+                <div class="block block-four"></div>
+                <div class="block block-five"></div>
+                <div class="block block-six"></div>
+            </div>
+        </footer>
     </body>
 </html>
