--- a/archive.html
+++ b/archive.html
@@ -69,5 +69,6 @@
             </div>
         </footer>
         <script src="js/projectDatabase.js"></script>
+        <script src="js/createArchive.js"></script>
     </body>
 </html>
