--- a/archive.html
+++ b/archive.html
@@ -40,7 +40,7 @@
                     </ul>
                 </nav>
             </div>
-            <h3 class="header">PROJECT ARCHIVE</h3>
+            <h3 id="archive-header" class="header">PROJECT ARCHIVE</h3>
 
             <nav class="site-nav show-lg">
                 <ul class="lg-nav">
