about content update

--- a/contact.html
+++ b/contact.html
@@ -62,11 +62,9 @@
                             <h3>ABOUT</h3>
                             <p class="">
                                 Hi! My name is Phillip. I am a Front End Web Developer based in Seattle, Washington.
-                                I have a Treehouse Front End Web Developement Techdegree and will be pursuing a fullstack techdegree through Treehosue as well.
                                 I am passionate about creating satisfying experiences with cohesive, minimal aesthetics.
                                 Click on any of the project cubes in my showcase or archive to view more details and 
-                                take a look at the websites I've made! I am currently available for work so don't hesitate to get in touch with me through 
-                                one of the links below!
+                                take a look at the websites I've made! I am currently available for work.
                             </p>
                         </div>
                     </div>
