back to top button

--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,10 @@
 
         </div>
         <footer>
+            <div id="back-to-top" class="back-to-top">
+                <p>back to top</p>
+            </div>
+            <script src="js/toTop.js"></script>
             <div class="color-block">
                 <div class="block block-one"></div>
                 <div class="block block-two"></div>
