--- a/archive.html
+++ b/archive.html
@@ -63,6 +63,10 @@
             </div>
         </div>
         <footer>
+            <div id="back-to-top" class="back-to-top">
+                <p>back to top</p>
+            </div>
+            <script src="js/toTop.js"></script>
             <div class="color-block">
                 <div class="block block-one"></div>
                 <div class="block block-two"></div>
