updated contact info

--- a/contact.html
+++ b/contact.html
@@ -72,10 +72,11 @@
 
                         </div> -->
                         <div class="contact-info">
-                            <a href="mailto:flip.dlankford@gmail.com" ><h3>EMAIL</h3></a>
+                            <a href="mailto:phillip@philliplankford.com" ><h3>EMAIL</h3></a>
                             <a href="https://twitter.com/__phillip" ><h3>TWITTER</h3></a>
                             <a href="https://www.instagram.com/philliplankford/" ><h3>INSTAGRAM</h3></a>
                             <a href="https://www.linkedin.com/in/phillip-lankford-3968201b0/" ><h3>LINKEDIN</h3></a>
+                            <a href="https://phillipp.itch.io/" ><h3>ITCH.IO</h3></a>
                         </div>
 
 
