adjust layout to calc for footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!--/CARD-->
 
             <!--Project Collection-->
-            <h3 class="header">PROJECT SHOWCASE</h3>
+            <h3 class="header">PROJECTS</h3>
 
             <nav class="site-nav show-lg">
                 <ul class="lg-nav">
@@ -65,10 +65,10 @@
             <div class="project-grid"><!--insert projects via js--></div>
         </div>
         <footer>
-            <div id="back-to-top" class="back-to-top">
+            <!-- <div id="back-to-top" class="back-to-top">
                 <p>back to top</p>
             </div>
-            <script src="js/toTop.js"></script>
+            <script src="js/toTop.js"></script> -->
             <div class="color-block">
                 <div class="block block-one"></div>
                 <div class="block block-two"></div>
@@ -78,7 +78,7 @@
                 <div class="block block-six"></div>
             </div>
         </footer>
-        <script src="js/projectDatabase.js"></script>
-        <script src="js/createShowcase.js"></script>
+        <!-- <script src="js/projectDatabase.js"></script> -->
+        <!-- <script src="js/createShowcase.js"></script> -->
     </body>
 </html>
