--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
+
+        <div id="cube" class="cube">
+            <div class="inner-face inner-front"></div>
+            <div class="inner-face inner-back"></div>
+            <div class="inner-face inner-bottom"></div>
+            <div class="inner-face inner-top"></div>
+            <div class="inner-face inner-left"></div>
+            <div class="inner-face inner-right"></div>
+
+            <div class="cube-face cube-front"></div>
+            <div class="cube-face cube-back"></div>
+            <div class="cube-face cube-bottom"></div>
+            <div class="cube-face cube-top"></div>
+            <div class="cube-face cube-left"></div>
+            <div class="cube-face cube-right"></div>
+        </div>
+
+        <script src="js/bounce.js"></script>
+
         <div class="outer-wrapper site-grid">
 
             <div class="my-card">
